[package]
name = "usrprecorder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
chrono = "0.4.22"
log = "0.4.17"
log4rs = "1.1.1"
serde = "1.0.144"
serde_derive = "1.0.144"
toml = "0.5.9"
